# Compile

./: .clang-format  .gitignore  CMakeLists.txt  InstructionStatistics.txt  Makefile  buildTestZip.ps1  compiler.cpp  designDoc.md  main.c  package.ps1  readme.md  test.c  testfile1.c  优化文档.md
MyMake/: Makefile
MySimpleMake/: Makefile
doc/: 优化文档.md  总结感想.md
lib/: Makefile
libsysy/: libsysy.c  libsysy.h
src/: CMakeLists.txt  Compiler.h  Error.cpp  Error.h  LexType.h  Lexer.cpp  Lexer.h  LinkedHashMap.h  config.h  main.cpp
src/AST/: AST.cpp  AST.h  CompUnit.cpp  CompUnit.h
src/AST/decl/: Decl.cpp  Decl.h  Def.cpp  Def.h  InitVal.cpp  InitVal.h
src/AST/expr/: Exp.cpp  Exp.h  MultiExp.cpp  UnaryExp.cpp
src/AST/func/: Func.cpp  Func.h
src/AST/stmt/: Stmt.cpp  Stmt.h
src/backend/: CodeGen.cpp  CodeGen.h  Instruction.cpp  Instruction.h  MIPS.cpp  MIPS.h  Memory.cpp  Memory.h  Register.cpp  Register.h  StackMemory.cpp  StackMemory.h
src/error/: Error.cpp  Error.h
src/errorHandler/: Error.cpp  Error.h
src/frontend/error/: Error.cpp  Error.h
src/frontend/lexer/: LexType.cpp  LexType.h  Lexer.cpp  Lexer.h  LinkedHashMap.h  NodeType.cpp  NodeType.h
src/frontend/parser/: CompUnit.cpp  CompUnit.h  Parser.cpp  Parser.h
src/frontend/parser/decl/: Decl.cpp  Decl.h  Def.cpp  Def.h  InitVal.cpp
src/frontend/parser/expr/: Exp.h  UnaryExp.cpp
src/frontend/parser/func/: Func.h
src/frontend/parser/stmt/: Stmt.cpp  Stmt.h
src/frontend/symTab/: SymTab.cpp  SymTab.h  Symbol.cpp  Symbol.h
src/lexer/: LexType.h  Lexer.cpp  Lexer.h  LinkedHashMap.h  NodeType.cpp  NodeType.h
src/middle/: CodeGen.cpp  CodeGen.h  IR.cpp  IR.h  design.md
src/parser/: CompUnit.cpp  CompUnit.h  Node.cpp  Node.h  OldParser.cpp  OldParser.h  Parser.cpp  Parser.h  SynType.h
src/parser/decl/: Decl.cpp  Decl.h  Def.cpp  Def.h  InitVal.cpp  InitVal.h
src/parser/expr/: Exp.cpp  Exp.h  MultiExp.cpp  UnaryExp.cpp
src/parser/expr/multiExp/: MultiExp.h
src/parser/expr/unaryExp/: UnaryExp.h
src/parser/func/: Func.cpp  Func.h
src/parser/stmt/: Stmt.cpp  Stmt.h
src/symTab/: SymTab.cpp  SymTab.h  Symbol.h
src/tools/: CircularQueue.h  LinkedHashMap.h
testfiles/: output1.txt  output4.txt  output5.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt
